Mobile layout bugfixes (#38)
* Mobile layout for welcome view

* Mobile layout for navbar and changed geolocate control position

* Mobile layout for snowtype information view

* Mobile layout for filter feature

* Added header to mobile view and changed filter icon

* Fixed bug where management view was visible while not logged in

* Error message when giving wrong credentials logging in

* Mobile layout fix and small change to header

* Bug with snow type filter fixed

* Typo fixed on snow type information tab

* Removed unnecessary console.logs

* Fix for navbar position issue

* Fix to segment coloring

* Mobile welcome view styling

* Fix to welcome view mobile

--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -43,25 +43,26 @@ body {
 }
 
 .app .weather_tab {
-  flex: 1 1 auto;
-  height: 100vh; /*calc(100vh - 55px);*/
+  position: fixed;
+  bottom: 0;
+  height: 100%;
   overflow-y: scroll;
   width: 75vw;
-  position: absolute;
-  top: 0px;
-  left: 0px;
   z-index: 4;
   background: linear-gradient(135deg, #1C4777, #B8C1E0, #539BD5);
 }
 
 .app .map_container {
-  flex: 1 1 auto;
-  height: 100vh /*calc(100vh - 55px);*/
+  position: fixed;
+  bottom: 0;
+  height: 100%;
 }
 
 .map {
-  flex: 1 1 auto;
-  height: 100vh; /*calc(100vh - 55px);*/
+  position: fixed;
+  bottom: 0;
+  height: 100%;
+  width: 75vw;
 }
 
 .info {
@@ -77,10 +78,10 @@ body {
 }
 
 .app .snow_tab {
-  flex: 1 1 auto;
-  height: 100vh;
+  position: fixed;
+  bottom: 0;
+  height: 100%;
   z-index: 4;
-  position: absolute;
   overflow-y: scroll;
   width: 75vw;
   background-color: white;
@@ -94,6 +95,9 @@ body {
 
 .bottom_navigation {
   z-index: 5;
+  position: fixed;
+  bottom: 0;
+  height: 55px;
 }
 
 .root {
@@ -102,7 +106,11 @@ body {
 }
 
 .welcome_view {
-  flex: 25%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 25vw;
 }
 
 .app .login_icon {
@@ -111,12 +119,12 @@ body {
   right: 5px;
 }
 .app .management_view {
-  flex: 1 1 auto;
-  height: 100vh;
+  position: fixed;
+  bottom: 0;
+  height: 100%;
   z-index: 3;
   overflow-y: scroll;
   width: 75vw;
-  position: absolute;
   background-color: white;
 }
 
@@ -134,16 +142,16 @@ body {
     width: 100vw;
   }
 
+  .map {
+    width: 100vw;
+  }
+
   .app .weather_tab {
     width: 100vw;
   }
 
   .welcome_view {
-    position: absolute;
-    top: 0px;
-    left: 0px;
     width: 100vw;
-    height: 100vh;
     z-index: 6;
   }
 }
